--- a/index.html
+++ b/index.html
@@ -1,186 +1,260 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>SecureWipe - Secure Data Wiping & Certification</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>SecureWipe - Secure Data Wiping & Certification</title>
 
-  <!-- Fonts & Icons -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- Optional: Font Awesome for extra icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-  <!-- Main stylesheet -->
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <a class="logo" href="#">
-        <span class="material-icons">security</span>
-        <span class="brand">SecureWipe</span>
-      </a>
-      <nav class="main-nav" aria-label="Main navigation">
-        <a href="#features">Features</a>
-        <a href="#how">How it Works</a>
-        <a href="#wipe">Wipe Tool</a>
-        <a href="#download" class="btn-ghost">Download</a>
-      </nav>
-    </div>
-  </header>
-
-  <main>
-    <!-- HERO -->
-    <section class="hero">
-      <div class="container hero-grid">
-        <div class="hero-content">
-          <h1>SecureWipe - Data Erasure You Can Trust</h1>
-          <p class="lead">
-            A custom bootable USB solution built for enterprises and IT professionals who require absolute certainty in data destruction. It securely and irreversibly wipes PCs, laptops, and Android devices while adhering to NIST 800-88 standards. Every operation produces verifiable, tamper-proof proof of erasure, giving organizations complete transparency, audit readiness, and peace of mind when retiring or recycling devices
-          </p>
-          <div class="hero-ctas">
-            <button id="open-wipe" class="btn-primary">Open Wipe Tool</button>
-            <a class="btn-outline" href="#how">How it works</a>
-          </div>
-          <small class="note">Designed for HDD, SSD/NVMe and Android devices.</small>
-        </div>
-
-        <div class="hero-media" aria-hidden="false">
-          <!-- A generic security/tech image from Unsplash (replace with a fixed image URL if you prefer) -->
-          <img src="https://imgs.search.brave.com/nWBowd4fmH4BHQYkLnJXd0nL7cEXesF4OO9NY7PzfY4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5pc3RvY2twaG90/by5jb20vaWQvMTM4/NDQzNDUzNi92ZWN0/b3IvbWFuLXJlbW92/aW5nLWRhdGEtZmls/ZXMtb3ItZG9jdW1l/bnRzLXRvLXRyYXNo/LWJpbi5qcGc_cz02/MTJ4NjEyJnc9MCZr/PTIwJmM9SWFJdHpR/VzVQMTNYSXpmeWs4/SXhjZUlwNXN1OHZ3/UHdjOF9ZVWhLN21F/ST0" alt="Secure data erasure illustration">
-        </div>
+    <!-- Fonts & Icons -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!-- Optional: Font Awesome for extra icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <!-- Main stylesheet -->
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <header class="site-header">
+      <div class="container header-inner">
+        <a class="logo" href="#">
+          <span class="material-icons">security</span>
+          <span class="brand">SecureWipe</span>
+        </a>
+        <nav class="main-nav" aria-label="Main navigation">
+          <a href="#features">Features</a>
+          <a href="#how">How it Works</a>
+          <a href="#wipe">Wipe Tool</a>
+          <a href="#download" class="btn-ghost">Download</a>
+        </nav>
       </div>
-    </section>
+    </header>
 
-    <!-- FEATURES -->
-    <section id="features" class="section features container">
-      <h2>Key features</h2>
-      <div class="features-grid">
-        <article class="card">
-          <span class="material-icons big">verified_user</span>
-          <h3>Standards-compliant</h3>
-          <p>Implements NIST SP 800-88 recommended sanitization levels and industry best practices for secure erasure.</p>
-        </article>
-
-        <article class="card">
-          <span class="material-icons big">usb</span>
-          <h3>Offline & Bootable</h3>
-          <p>Works from a bootable USB for full offline operation - ideal for secure IT asset recycling and field use.</p>
-        </article>
-
-        <article class="card">
-          <span class="material-icons big">adb</span>
-          <h3>Automated Verification</h3>
-          <p>Auto-verifies wipe completion and generates a digitally-signed, auditable certificate for compliance records.</p>
-        </article>
-      </div>
-    </section>
-
-    <!-- HOW IT WORKS -->
-    <section id="how" class="section how container">
-      <h2>How it works</h2>
-      <ol class="how-list">
-        <li>
-          <strong>Identify device</strong>
-          <p>Detect or choose the target (PC HDD/SSD/NVMe or Android).</p>
-        </li>
-        <li>
-          <strong>Choose method</strong>
-          <p>Quick Erase, Cryptographic Erase, or NIST Purge (full sanitization).</p>
-        </li>
-        <li>
-          <strong>Wipe & verify</strong>
-          <p>Tool performs wipe, then verifies overwrite/cryptographic key destruction.</p>
-        </li>
-        <li>
-          <strong>Certificate</strong>
-          <p>Automatically generates a tamper-evident certificate with timestamp and cryptographic proof.</p>
-        </li>
-      </ol>
-    </section>
-
-    <!-- WIPE TOOL -->
-    <section id="wipe" class="section wipe container">
-      <h2>Wipe Tool (simulated UI)</h2>
-
-      <div class="wipe-grid">
-        <form id="wipe-form" class="panel" aria-label="Wipe configuration">
-          <label for="device-select">Device type</label>
-          <select id="device-select" required>
-            <option value="desktop-hdd">PC - Linux</option>
-            <option value="desktop-ssd">PC - Windows</option>
-            <option value="android">Android device</option>
-          </select>
-
-          <label for="method-select">Sanitization method</label>
-          <select id="method-select">
-            <option value="quick">Quick Erase</option>
-            <option value="cryptographic">Cryptographic Erase</option>
-            <option value="nist">NIST SP 800-88 Purge (recommended)</option>
-          </select>
-
-          <label class="checkbox">
-            <input type="checkbox" id="encrypt-before" />
-            <span>Recommend: encrypt device before wipe (for flash devices)</span>
-          </label>
-
-          <p class="warning">
-            Warning: wiping will irreversibly destroy data. Ensure you have backups and the correct device selected.
-          </p>
-
-          <div class="form-actions">
-            <button type="button" id="start-wipe" class="btn-danger">Start Wipe</button>
-            <button type="button" id="open-guide" class="btn-ghost">Bootable USB Guide</button>
+    <main>
+      <!-- HERO -->
+      <section class="hero">
+        <div class="container hero-grid">
+          <div class="hero-content">
+            <h1>SecureWipe - Data Erasure You Can Trust</h1>
+            <p class="lead">
+              A custom bootable USB solution built for enterprises and IT
+              professionals who require absolute certainty in data destruction.
+              It securely and irreversibly wipes PCs, laptops, and Android
+              devices while adhering to NIST 800-88 standards. Every operation
+              produces verifiable, tamper-proof proof of erasure, giving
+              organizations complete transparency, audit readiness, and peace of
+              mind when retiring or recycling devices
+            </p>
+            <div class="hero-ctas">
+              <a href="SecureWipe.iso" download="CustomWipeTool.iso">
+                <button class="btn-primary" id="open-wipe">Start Wiping</button>
+              </a>
+              <a class="btn-outline" href="#how">How it works</a>
+            </div>
+            <small class="note"
+              >Designed for HDD, SSD/NVMe and Android devices.</small
+            >
           </div>
-        </form>
 
-        <aside class="panel status-panel" aria-live="polite">
-          <h3>Current status</h3>
-          <div class="status-placeholder">
-            <p id="status-text">Idle - configure wipe options and start.</p>
-            <div class="progress-wrap" hidden>
-              <div id="progress" class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
-                <div class="progress-fill" style="width:0%"></div>
+          <div class="hero-media" aria-hidden="false">
+            <!-- A generic security/tech image from Unsplash (replace with a fixed image URL if you prefer) -->
+            <img
+              src="https://imgs.search.brave.com/nWBowd4fmH4BHQYkLnJXd0nL7cEXesF4OO9NY7PzfY4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5pc3RvY2twaG90/by5jb20vaWQvMTM4/NDQzNDUzNi92ZWN0/b3IvbWFuLXJlbW92/aW5nLWRhdGEtZmls/ZXMtb3ItZG9jdW1l/bnRzLXRvLXRyYXNo/LWJpbi5qcGc_cz02/MTJ4NjEyJnc9MCZr/PTIwJmM9SWFJdHpR/VzVQMTNYSXpmeWs4/SXhjZUlwNXN1OHZ3/UHdjOF9ZVWhLN21F/ST0"
+              alt="Secure data erasure illustration"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- FEATURES -->
+      <section id="features" class="section features container">
+        <h2>Key features</h2>
+        <div class="features-grid">
+          <article class="card">
+            <span class="material-icons big">verified_user</span>
+            <h3>Standards-compliant</h3>
+            <p>
+              Implements NIST SP 800-88 recommended sanitization levels and
+              industry best practices for secure erasure.
+            </p>
+          </article>
+
+          <article class="card">
+            <span class="material-icons big">usb</span>
+            <h3>Offline & Bootable</h3>
+            <p>
+              Works from a bootable USB for full offline operation - ideal for
+              secure IT asset recycling and field use.
+            </p>
+          </article>
+
+          <article class="card">
+            <span class="material-icons big">adb</span>
+            <h3>Automated Verification</h3>
+            <p>
+              Auto-verifies wipe completion and generates a digitally-signed,
+              auditable certificate for compliance records.
+            </p>
+          </article>
+        </div>
+      </section>
+
+      <!-- HOW IT WORKS -->
+      <section id="how" class="section how container">
+        <h2>How it works</h2>
+        <ol class="how-list">
+          <li>
+            <strong>Identify device</strong>
+            <p>Detect or choose the target (PC HDD/SSD/NVMe or Android).</p>
+          </li>
+          <li>
+            <strong>Choose method</strong>
+            <p>
+              Quick Erase, Cryptographic Erase, or NIST Purge (full
+              sanitization).
+            </p>
+          </li>
+          <li>
+            <strong>Wipe & verify</strong>
+            <p>
+              Tool performs wipe, then verifies overwrite/cryptographic key
+              destruction.
+            </p>
+          </li>
+          <li>
+            <strong>Certificate</strong>
+            <p>
+              Automatically generates a tamper-evident certificate with
+              timestamp and cryptographic proof.
+            </p>
+          </li>
+        </ol>
+      </section>
+
+      <!-- WIPE TOOL -->
+      <section id="wipe" class="section wipe container">
+        <h2>Wipe Tool (simulated UI)</h2>
+
+        <div class="wipe-grid">
+          <form id="wipe-form" class="panel" aria-label="Wipe configuration">
+            <label for="device-select">Device type</label>
+            <select id="device-select" required>
+              <option value="desktop-hdd">PC - Linux</option>
+              <option value="desktop-ssd">PC - Windows</option>
+              <option value="android">Android device</option>
+            </select>
+
+            <label for="method-select">Sanitization method</label>
+            <select id="method-select">
+              <option value="quick">Quick Erase</option>
+              <option value="cryptographic">Cryptographic Erase</option>
+              <option value="nist">NIST SP 800-88 Purge (recommended)</option>
+            </select>
+
+            <label class="checkbox">
+              <input type="checkbox" id="encrypt-before" />
+              <span
+                >Recommend: encrypt device before wipe (for flash devices)</span
+              >
+            </label>
+
+            <p class="warning">
+              Warning: wiping will irreversibly destroy data. Ensure you have
+              backups and the correct device selected.
+            </p>
+
+            <div class="form-actions">
+              <button type="button" id="start-wipe" class="btn-danger">
+                Start Wipe
+              </button>
+              <button type="button" id="open-guide" class="btn-ghost">
+                Bootable USB Guide
+              </button>
+            </div>
+          </form>
+
+          <aside class="panel status-panel" aria-live="polite">
+            <h3>Current status</h3>
+            <div class="status-placeholder">
+              <p id="status-text">Idle - configure wipe options and start.</p>
+              <div class="progress-wrap" hidden>
+                <div
+                  id="progress"
+                  class="progress-bar"
+                  role="progressbar"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                  aria-valuenow="0"
+                >
+                  <div class="progress-fill" style="width: 0%"></div>
+                </div>
+                <ul id="status-log" class="status-log"></ul>
               </div>
-              <ul id="status-log" class="status-log"></ul>
             </div>
-          </div>
 
-          <div id="certificate-area" class="certificate-area" hidden>
-            <h4>Wipe Certificate</h4>
-            <pre id="certificate-json" class="certificate-json" aria-label="Wipe certificate"></pre>
-            <div class="cert-actions">
-              <button id="download-cert" class="btn-primary small">Download</button>
-              <button id="copy-cert" class="btn-ghost small">Copy</button>
+            <div id="certificate-area" class="certificate-area" hidden>
+              <h4>Wipe Certificate</h4>
+              <!-- <pre
+                id="certificate-json"
+                class="certificate-json"
+                aria-label="Wipe certificate"
+              ></pre> -->
+              <div class="cert-actions">
+                <button id="download-cert" class="btn-primary small">
+                  Download Your Certificate
+                </button>
+                <!-- <button id="copy-cert" class="btn-ghost small">Copy</button> -->
+              </div>
             </div>
-          </div>
-        </aside>
+          </aside>
+        </div>
+      </section>
+    </main>
+
+    <footer class="site-footer">
+      <div class="container footer-inner">
+        <div>
+          © <strong>SecureWipe</strong> - Built for secure IT asset recycling &
+          compliance.
+        </div>
+        <div class="footer-links">
+          <a href="#">Privacy</a> · <a href="#">Terms</a> ·
+          <a href="#">Contact</a>
+        </div>
       </div>
-    </section>
+    </footer>
 
-  </main>
-
-  <footer class="site-footer">
-    <div class="container footer-inner">
-      <div>© <strong>SecureWipe</strong> - Built for secure IT asset recycling & compliance.</div>
-      <div class="footer-links"><a href="#">Privacy</a> · <a href="#">Terms</a> · <a href="#">Contact</a></div>
-    </div>
-  </footer>
-
-  <!-- Confirmation modal -->
-  <div id="confirm-modal" class="modal" role="dialog" aria-modal="true" aria-hidden="true">
-    <div class="modal-panel">
-      <h3>Confirm wipe</h3>
-      <p id="confirm-desc">You are about to run a secure wipe. This action is irreversible. Continue?</p>
-      <div class="modal-actions">
-        <button id="modal-cancel" class="btn-ghost">Cancel</button>
-        <button id="modal-confirm" class="btn-danger">Confirm & Start</button>
+    <!-- Confirmation modal -->
+    <div
+      id="confirm-modal"
+      class="modal"
+      role="dialog"
+      aria-modal="true"
+      aria-hidden="true"
+    >
+      <div class="modal-panel">
+        <h3>Confirm wipe</h3>
+        <p id="confirm-desc">
+          You are about to run a secure wipe. This action is irreversible.
+          Continue?
+        </p>
+        <div class="modal-actions">
+          <button id="modal-cancel" class="btn-ghost">Cancel</button>
+          <button id="modal-confirm" class="btn-danger">Confirm & Start</button>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Scripts -->
-  <script src="js/script.js" defer></script>
-</body>
+    <!-- Scripts -->
+    <script src="js/script.js" defer></script>
+  </body>
 </html>
