--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
   <body>
     <header class="site-header">
       <div class="container header-inner">
-        <a class="logo" href="#">
+        <!-- <a class="logo" href="#">
           <span class="material-icons">security</span>
           <span class="brand">SecureWipe</span>
-        </a>
+        </a> -->
+        <img src="img/logo.png" alt="SecureWipe Logo" class="logo" />
         <nav class="main-nav" aria-label="Main navigation">
           <a href="#features">Features</a>
           <a href="#how">How it Works</a>
