changed_iso file

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
           <a href="#features">Features</a>
           <a href="#how">How it Works</a>
           <a href="#wipe">Wipe Tool</a>
-          <a href="#download" class="btn-ghost">Download</a>
         </nav>
       </div>
     </header>
@@ -382,41 +381,6 @@
               </button>
             </div>
           </form>
-
-          <aside class="panel status-panel" aria-live="polite">
-            <h3>Current status</h3>
-            <div class="status-placeholder">
-              <p id="status-text">Idle - configure wipe options and start.</p>
-              <div class="progress-wrap" hidden>
-                <div
-                  id="progress"
-                  class="progress-bar"
-                  role="progressbar"
-                  aria-valuemin="0"
-                  aria-valuemax="100"
-                  aria-valuenow="0"
-                >
-                  <div class="progress-fill" style="width: 0%"></div>
-                </div>
-                <ul id="status-log" class="status-log"></ul>
-              </div>
-            </div>
-
-            <div id="certificate-area" class="certificate-area" hidden>
-              <h4>Wipe Certificate</h4>
-              <!-- <pre
-                id="certificate-json"
-                class="certificate-json"
-                aria-label="Wipe certificate"
-              ></pre> -->
-              <div class="cert-actions">
-                <button id="download-cert" class="btn-primary small">
-                  Download Your Certificate
-                </button>
-                <!-- <button id="copy-cert" class="btn-ghost small">Copy</button> -->
-              </div>
-            </div>
-          </aside>
         </div>
       </section>
     </main>
@@ -456,6 +420,6 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/script1.js" defer></script>
+    <script src="js/script.js" defer></script>
   </body>
 </html>
