--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </p>
             <!-- Start Wiping button -->
             <button class="btn-primary" id="start-wipe-btn">
-              Start Wiping
+              Download SecureWipe OS
             </button>
 
             <!-- Step 1: Download SecureWipe ISO -->
@@ -342,45 +342,48 @@
 
       <!-- WIPE TOOL -->
       <section id="wipe" class="section wipe container">
-        <h2>Wipe Tool (simulated UI)</h2>
+        <h2>Secure Wipe Supports</h2>
 
-        <div class="wipe-grid">
-          <form id="wipe-form" class="panel" aria-label="Wipe configuration">
-            <label for="device-select">Device type</label>
-            <select id="device-select" required>
-              <option value="desktop-hdd">PC - Linux</option>
-              <option value="desktop-ssd">PC - Windows</option>
-              <option value="android">Android device</option>
-            </select>
+        <div
+          style="
+            padding: 5px;
+            align-items: center;
+            border: 2px solid black;
+            background: #f0f0f0;
+            font-weight: 600;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            text-align: center;
+          "
+        >
+          <div style="padding: 5px; border-right: 1px solid black">
+            Device type
+          </div>
 
-            <label for="method-select">Sanitization method</label>
-            <select id="method-select">
-              <option value="quick">Quick Erase</option>
-              <option value="cryptographic">Cryptographic Erase</option>
-              <option value="nist">NIST SP 800-88 Purge (recommended)</option>
-            </select>
-
-            <label class="checkbox">
-              <input type="checkbox" id="encrypt-before" />
-              <span
-                >Recommend: encrypt device before wipe (for flash devices)</span
-              >
-            </label>
-
-            <p class="warning">
-              Warning: wiping will irreversibly destroy data. Ensure you have
-              backups and the correct device selected.
-            </p>
-
-            <div class="form-actions">
-              <button type="button" id="start-wipe" class="btn-danger">
-                Start Wipe
-              </button>
-              <button type="button" id="open-guide" class="btn-ghost">
-                Bootable USB Guide
-              </button>
-            </div>
-          </form>
+          <div style="padding: 5px">PC - Linux</div>
+          <div style="padding: 5px">PC - Windows</div>
+          <div style="padding: 5px">Android device</div>
+        </div>
+        <div
+          style="
+            padding: 5px;
+            align-items: center;
+            border: 2px solid black;
+            background: #f0f0f0;
+            font-weight: 600;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            text-align: center;
+          "
+        >
+          <div style="padding: 5px; border-right: 1px solid black">
+            Wipe method
+          </div>
+          <div style="padding: 5px; margin-right: 5px">
+            Quick Erase (Zero Fill)
+          </div>
+          <div style="padding: 5px">HDD/SSD/NVMe</div>
+          <div style="padding: 5px">Custom Wipe</div>
         </div>
       </section>
     </main>
@@ -397,27 +400,6 @@
         </div>
       </div>
     </footer>
-
-    <!-- Confirmation modal -->
-    <div
-      id="confirm-modal"
-      class="modal"
-      role="dialog"
-      aria-modal="true"
-      aria-hidden="true"
-    >
-      <div class="modal-panel">
-        <h3>Confirm wipe</h3>
-        <p id="confirm-desc">
-          You are about to run a secure wipe. This action is irreversible.
-          Continue?
-        </p>
-        <div class="modal-actions">
-          <button id="modal-cancel" class="btn-ghost">Cancel</button>
-          <button id="modal-confirm" class="btn-danger">Confirm & Start</button>
-        </div>
-      </div>
-    </div>
 
     <!-- Scripts -->
     <script src="js/script.js" defer></script>
